+ milestone form made + extract jlist population to controller class + extracted disposible forms to controller class + created a new task form + populated task and activity in module based on the current assessment selection + launch task overview by clicking on module overview

--- a/src/softwareproject/view/ModuleOverview.form
+++ b/src/softwareproject/view/ModuleOverview.form
@@ -123,11 +123,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add Task"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddTaskActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnAddMilestone">
       <Properties>
         <Property name="text" type="java.lang.String" value="Add Milestone"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddMilestoneActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnAddActivity">
       <Properties>
@@ -152,7 +158,11 @@
                 <StringItem index="4" value="Item 5"/>
               </StringArray>
             </Property>
+            <Property name="selectionMode" type="int" value="0"/>
           </Properties>
+          <Events>
+            <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="lstCourseworkValueChanged"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -174,7 +184,11 @@
                 <StringItem index="4" value="Item 5"/>
               </StringArray>
             </Property>
+            <Property name="selectionMode" type="int" value="0"/>
           </Properties>
+          <Events>
+            <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="lstCourseTestValueChanged"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -196,7 +210,11 @@
                 <StringItem index="4" value="Item 5"/>
               </StringArray>
             </Property>
+            <Property name="selectionMode" type="int" value="0"/>
           </Properties>
+          <Events>
+            <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="lstExamValueChanged"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -241,6 +259,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lstCurrentTasksMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
